k8s/app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/cache-enable: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    traefic.frontend.rule.type: PathStrip
  name: ingress-hrms-app
  namespace: education-infra
spec:
  rules:
    - host: uat-edu.deepblueai.com
      http:
        paths:
          - path: /apis
            pathType: "Prefix"
            backend:
              serviceName: hrms-user
              servicePort: 8001
          - path: /wechat
            pathType: "Prefix"
            backend:
              serviceName: hrms-wechat
              servicePort: 80
  tls:
    - hosts:
        - uat-edu.deepblueai.com
      secretName: deepblueai-tls
